--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@tabler/icons-react": "^3.34.0",
     "@uploadthing/react": "^7.3.2",
@@ -37,6 +39,7 @@
     "sweetalert2": "^11.22.2",
     "swiper": "^12.0.3",
     "tailwind-merge": "^3.3.1",
+    "three": "^0.181.2",
     "uploadthing": "^7.7.3",
     "zustand": "^5.0.6"
   },
