--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "colore-art-crafts",
+  "name": "solocoding",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "^14.2.15",
+    "@paypal/react-paypal-js": "^8.9.2",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
